--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,7 @@ ij_any_block_comment_add_space = false
 ij_any_block_comment_at_first_column = false
 ij_any_line_comment_at_first_column = false
 ij_any_line_comment_add_space = true
+trim_trailing_whitespace = true
 
 [*.tiny]
 indent_style=tab
@@ -18,7 +19,7 @@ end_of_line=crlf
 [*.yml]
 indent_size=2
 
-[*.patch]
+[{*.patch,*.md}]
 trim_trailing_whitespace=false
 
 [*.java]
@@ -27,6 +28,7 @@ ij_java_class_count_to_use_import_on_demand = 999999
 ij_java_insert_inner_class_imports = false
 ij_java_names_count_to_use_import_on_demand = 999999
 ij_java_imports_layout = *,|,$*
+ij_java_layout_static_imports_separately = true
 ij_java_generate_final_locals = true
 ij_java_generate_final_parameters = true
 ij_java_method_parameters_new_line_after_left_paren = true
